# temp-graph-esp

./: Cargo.toml  README.md  cfg.toml.example  plot.html  plot.js  sdkconfig.defaults
.cargo/: config.toml
examples/: spi.rs
src/: main.rs  temp_sensor_old.rs  websocket_server.rs  wifi.rs
