[package]
name = "oliebol"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "oliebol"
harness = false  # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "=1.0.86"
cc = "=1.1.31"
const_format = "0.2.34"
embedded-svc = "=0.28.0"
embedded-websocket = { version = "0.9.4" }
esp-idf-svc = "0.49.0"
# esp-max31865 = "0.1.0"
httparse = { version = "1.9.5", default-features = false }
jiff = "0.1.15"
esp-max31865 = { path = "../clones/esp-max31865" }
log = "=0.4.22"
shtcx = "=1.0.0"
toml-cfg = "=0.1.3"

[build-dependencies]
embuild = "=0.32.0"
toml-cfg = "=0.1.3"
